# maxtexlib

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/maxtexlib/: config.py  main.py
src/maxtexlib/templates/: main_template.tex  makefile
src/maxtexlib/templates/figures/: figure1_template.py  figure2_template.py  figure3_template.py
tests/unit/: test_app.py
